wxc/include/ewxw/wxc_glue.h



/* wxImage */
TClassDefExtend(wxImage,wxObject)
TBool      wxImage_CanRead( TStringVoid name );

void       wxImage_ConvertToBitmap( TSelf(wxImage) _obj, TClassRef(wxBitmap) bitmap );

int        wxImage_CountColours( TSelf(wxImage) _obj, int stopafter );

TClass(wxImage) wxImage_CreateDefault(  );

TClass(wxImage) wxImage_CreateFromBitmap( TClass(wxBitmap) bitmap );

TClass(wxImage) wxImage_CreateFromData( TSize(width,height), void* data );

TClass(wxImage) wxImage_CreateFromFile( TStringVoid name );

TClass(wxImage) wxImage_CreateSized( TSize(width,height) );

void       wxImage_Destroy( TSelf(wxImage) _obj );

TChar      wxImage_GetBlue( TSelf(wxImage) _obj, TPoint(x,y) );

void*      wxImage_GetData( TSelf(wxImage) _obj );

TChar      wxImage_GetGreen( TSelf(wxImage) _obj, TPoint(x,y) );

int        wxImage_GetHeight( TSelf(wxImage) _obj );

TChar      wxImage_GetMaskBlue( TSelf(wxImage) _obj );

TChar      wxImage_GetMaskGreen( TSelf(wxImage) _obj );

TChar      wxImage_GetMaskRed( TSelf(wxImage) _obj );

TChar      wxImage_GetRed( TSelf(wxImage) _obj, TPoint(x,y) );

void       wxImage_GetSubImage( TSelf(wxImage) _obj, TRect(x,y,w,h), TClassRef(wxImage) image );

int        wxImage_GetWidth( TSelf(wxImage) _obj );

TBool      wxImage_HasMask( TSelf(wxImage) _obj );

void       wxImage_Initialize( TSelf(wxImage) _obj, TSize(width,height) );

void       wxImage_InitializeFromData( TSelf(wxImage) _obj, TSize(width,height), void* data );

TBoolInt   wxImage_LoadFile( TSelf(wxImage) _obj, TStringVoid name, int type );

void       wxImage_Mirror( TSelf(wxImage) _obj, TBoolInt horizontally, TClassRef(wxImage) image );

TBool      wxImage_Ok( TSelf(wxImage) _obj );

void       wxImage_Paste( TSelf(wxImage) _obj, TClass(wxImage) image, TPoint(x,y) );

void       wxImage_Replace( TSelf(wxImage) _obj, TColorRGB(r1,g1,b1), TColorRGB(r2,g2,b2) );

void       wxImage_Rescale( TSelf(wxImage) _obj, TSize(width,height) );

void       wxImage_Rotate( TSelf(wxImage) _obj, double angle, TPoint(c_x,c_y), TBoolInt interpolating, void* offset_after_rotation, TClassRef(wxImage) image );

void       wxImage_Rotate90( TSelf(wxImage) _obj, TBoolInt clockwise, TClassRef(wxImage) image );

TBoolInt   wxImage_SaveFile( TSelf(wxImage) _obj, TStringVoid name, int type );

void       wxImage_Scale( TSelf(wxImage) _obj, TSize(width,height), TClassRef(wxImage) image );

void       wxImage_SetData( TSelf(wxImage) _obj, void* data );

void       wxImage_SetDataAndSize( TSelf(wxImage) _obj, void* data, TSize(new_width,new_height) );

void       wxImage_SetMask( TSelf(wxImage) _obj, int mask );

void       wxImage_SetMaskColour( TSelf(wxImage) _obj, TColorRGB(r,g,b) );

void       wxImage_SetRGB( TSelf(wxImage) _obj, TPoint(x,y), TColorRGB(r,g,b) );