wxc/include/wxc.h


TClass(wxImage) wxImage_CreateFromDataEx( TSize(width,height), void* data, TBoolInt isStaticData);

void wxImage_Delete( TSelf(wxImage) image );